# Life-Decision-Simulation-engine-

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scratch_db_inspect.py  scratch_test_groq.py
config/: analytics_migration.sql  logging_config.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/cinematic/: boot_screen.tsx  onboarding_deck.tsx  simulation_monitor.tsx  telemetry_radar.tsx
frontend/src/components/drishti/: debug_overlay.tsx  explanation_card.tsx  feedback_panel.tsx  identity_form.tsx  interview_console.tsx  landing_page.tsx  persona_panel.tsx  persona_reveal.tsx
frontend/src/context/: SimulationContext.tsx
frontend/src/lib/: api.ts
logs/sessions/: 36ef1f0c-9757-443a-90b0-63e8f76ae5db.jsonl  4719cbf7-22e0-49d4-bbfc-2a9c9478cc0f.jsonl
src/: main.py
src/api/: __init__.py  router.py  schemas.py
src/core/: analytics.py  memory.py  schema.py  state.py
src/pipelines/: __init__.py  interview.py  reflection.py
src/utils/: api_client.py  prompts.py  sanitizer.py
tests/: test_api.py  test_interview.py  test_memory.py  test_reflection.py  test_schema.py
