[project]
name = "generative-agent-simulation-engine"
version = "0.1.0"
description = "A Generative Agent Simulation Engine for creating high-fidelity digital twins from dynamic AI interviews. Phases 1-2: Core data contracts, immutable identity matrix schema, and parallel expert reflection pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Simulation Engine Team"},
]
keywords = ["generative-agents", "simulation", "digital-twins", "pydantic", "ai"]

dependencies = [
    "pydantic>=2.6,<3.0",
    "openai>=1.30,<2.0",
    "supabase>=2.4.0",
    "httpx>=0.23.0,<1.0",
    "langgraph>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-dotenv>=1.0.0",
    "google-genai>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
